--- a/shoppi/app/src/main/res/values/strings.xml
+++ b/shoppi/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="description_product_detail_thubnail">상품 상세 대표 이미지</string>
     <string name="title_product_detail_image">상품설명</string>
     <string name="description_product_dectail_image">상품 상세 이미지</string>
+    <string name="label_category_icon">카테고리</string>
+    <string name="label_home_icon">홈</string>
+    <string name="label_cart_icon">카트</string>
 </resources>
